[package]
name = "mkl_link"
version = "0.1.0"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
license = "BSD-2-Clause"
description = "CBLAS FFI bindings."
repository = "https://github.com/peterhj/libmkl_link"
keywords = ["blas", "intel", "mkl"]
readme = "README.md"
build = "build.rs"

[features]
default = []
openmp = []
tbb = []

[lib]
name = "mkl_link"
path = "src/lib.rs"

[dependencies]
libc = "^0.2"
