[package]
name = "mkl_link"
version = "0.1.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
license = "BSD-2-Clause"
description = "Library for linking with MKL."
repository = "https://github.com/peterhj/libmkl_link"
keywords = ["blas", "intel", "mkl"]
readme = "README.md"
build = "build.rs"

[features]
default = []
openmp = []
tbb = []

[lib]
name = "mkl_link"
path = "src/lib.rs"
